SONARJAVA-5120 S1182 Super call that are not directly in the scope of the method are wrongly taken into account (#4859)